Message Modal: Fix spacing in the Delete Message Modal (#4903)

--- a/src/components/common/DeleteMessageModal.module.scss
+++ b/src/components/common/DeleteMessageModal.module.scss
@@ -13,6 +13,10 @@
   margin: 0;
 }
 
+.singleTitle {
+  margin-bottom: 1rem;
+}
+
 .actionTitle {
   margin-top: 1.5rem;
   margin-left: 1rem;
